# netbatch

./: .gitignore  CMakeLists.txt  README.md  batchserver.cpp  debug_lock.hpp  gen_project.sh  recordfiler.cpp  tqueue.hpp
proto/: message.proto
python/: test_batchserver_client.py
src/: CMakeLists.txt  batchserver.cpp  jpegNPP.cpp  tqueue.hpp
src/proto/: CMakeLists.txt  message.proto
src/python/: exhaust_imagenet_batches.py  image_filter_worker.py  image_transforms.py  message_pb2.py  my_parameter.py  netbatch_dataset.py  start_imagenet_batchserver.sh  start_local_imagenet_batchserver.sh  test_image_conversion.py  test_imagenet_batches.py  test_netbatch_dataset.py
src/python/imagenet/: exhaust_imagenet_batches.py  image_filter_worker.py  image_filter_worker_mp.py  image_transforms.py  imagenet_example.py  resnet_prelu.py  test_image_conversion.py
src/python/test/: test_netbatch_dataset.py
